added average math and reading scores by grade.

--- a/function.ipynb
+++ b/function.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e32f6240",
+   "id": "19a72a3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4da152c3",
+   "id": "21b93e62",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "632aae66",
+   "id": "0075b09a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a40b4744",
+   "id": "438a0e54",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9f46a67c",
+   "id": "bb2ada95",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b65466ef",
+   "id": "8770cbc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f2953d20",
+   "id": "304162e3",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "33ddeca1",
+   "id": "b8a7aed8",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "564d7a9e",
+   "id": "5d680ce7",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "99322737",
+   "id": "3804b953",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "97f82a21",
+   "id": "b6491d3d",
    "metadata": {},
    "outputs": [
     {
@@ -241,8 +241,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "97efa5ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4,9,3 Practice: Object Oriented PRogramming\n",
+    "class Cat:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "40ecc70b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name, color, sound):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.sound = sound\n",
+    "\n",
+    "    def bark(self):\n",
+    "        return self.sound + ' ' + self.sound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "984ab017",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fido\n",
+      "brown\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'woof! woof!'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_dog = Dog('Fido', 'brown', 'woof!')\n",
+    "print(    first_dog.name)\n",
+    "print(first_dog.color)\n",
+    "first_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "92d2619f",
+   "id": "f27ab9ec",
    "metadata": {},
    "outputs": [],
    "source": []
