scores by school type.

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1457,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7ce50566",
+   "id": "8fa7a38c",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b0f33e49",
+   "id": "cffc04af",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "54b2f18a",
+   "id": "e4447a13",
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "01fc0919",
+   "id": "b6f52e95",
    "metadata": {},
    "outputs": [
     {
@@ -1569,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "63261d39",
+   "id": "e0f4414c",
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1593,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "63bb8132",
+   "id": "beeeaccf",
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1a98e143",
+   "id": "50e6255a",
    "metadata": {},
    "outputs": [
     {
@@ -1639,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4b8ccc44",
+   "id": "220def32",
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f2a8457b",
+   "id": "60c438af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "477bcda8",
+   "id": "46222fc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6100a094",
+   "id": "ee484ee5",
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "85e041cc",
+   "id": "8f5bfc6c",
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1759,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "dfd3a2a5",
+   "id": "f190dda1",
    "metadata": {},
    "outputs": [
     {
@@ -1903,7 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "52e2e2c9",
+   "id": "17812ba5",
    "metadata": {},
    "outputs": [
     {
@@ -2144,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "0f645bb2",
+   "id": "417c691c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2158,7 +2158,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d94843f1",
+   "id": "40279aef",
    "metadata": {},
    "outputs": [
     {
@@ -2178,7 +2178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "a91ac3c9",
+   "id": "8a775280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2197,7 +2197,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "9a43dc89",
+   "id": "6cadb694",
    "metadata": {},
    "outputs": [
     {
@@ -2217,7 +2217,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1e6f9609",
+   "id": "f8bd27e9",
    "metadata": {},
    "outputs": [
     {
@@ -2363,7 +2363,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "df2a83bf",
+   "id": "477f8975",
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2388,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "258f5dbb",
+   "id": "aa47a596",
    "metadata": {},
    "outputs": [
     {
@@ -2411,7 +2411,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "f5e4dc83",
+   "id": "8a25de32",
    "metadata": {},
    "outputs": [
     {
@@ -2493,7 +2493,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2f32996b",
+   "id": "e2cfe46c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2506,7 +2506,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "05b0b78d",
+   "id": "c78c7ffb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2517,7 +2517,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c10d54bc",
+   "id": "31952511",
    "metadata": {},
    "outputs": [
     {
@@ -2539,7 +2539,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ef65e35d",
+   "id": "596f9feb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2549,7 +2549,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "31c0a021",
+   "id": "f92c41cf",
    "metadata": {},
    "outputs": [
     {
@@ -2574,7 +2574,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "f4a53d03",
+   "id": "a3a2a036",
    "metadata": {},
    "outputs": [
     {
@@ -2600,7 +2600,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "52ffbdb8",
+   "id": "edc9cfc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2619,7 +2619,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "86005650",
+   "id": "d9c013ca",
    "metadata": {},
    "outputs": [
     {
@@ -2690,7 +2690,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "423e7cc1",
+   "id": "025ed1ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2713,7 +2713,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b391ef52",
+   "id": "64b24aeb",
    "metadata": {},
    "outputs": [
     {
@@ -2754,7 +2754,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "51280d79",
+   "id": "ed1c059f",
    "metadata": {},
    "outputs": [
     {
@@ -2884,7 +2884,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "9d5c90b3",
+   "id": "5fd3b79b",
    "metadata": {},
    "outputs": [
     {
@@ -2924,7 +2924,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "215291b7",
+   "id": "2f5099dc",
    "metadata": {},
    "outputs": [
     {
@@ -2963,7 +2963,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "435e54b3",
+   "id": "bd52fd77",
    "metadata": {},
    "outputs": [
     {
@@ -3001,7 +3001,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "251bcdcb",
+   "id": "19627e54",
    "metadata": {},
    "outputs": [
     {
@@ -3042,7 +3042,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "6bb7a295",
+   "id": "ce936860",
    "metadata": {},
    "outputs": [
     {
@@ -3083,7 +3083,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "07edaf6e",
+   "id": "bea01003",
    "metadata": {},
    "outputs": [
     {
@@ -3120,7 +3120,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "a91a2221",
+   "id": "9c3e5a4b",
    "metadata": {},
    "outputs": [
     {
@@ -3353,7 +3353,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "8266ec9d",
+   "id": "9e2066a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3366,7 +3366,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "8e756b11",
+   "id": "7fbddd03",
    "metadata": {},
    "outputs": [
     {
@@ -3418,7 +3418,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "94d1ca81",
+   "id": "a7005825",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3433,7 +3433,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "16e29011",
+   "id": "dbb108b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3446,7 +3446,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "3ef6cee0",
+   "id": "246fcf46",
    "metadata": {},
    "outputs": [
     {
@@ -3685,7 +3685,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "4ae4cfd5",
+   "id": "a3534baf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3698,7 +3698,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "546a76fc",
+   "id": "1e19ec7a",
    "metadata": {},
    "outputs": [
     {
@@ -3735,7 +3735,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "50df3276",
+   "id": "86b39bfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3750,7 +3750,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "235cb564",
+   "id": "5ea97777",
    "metadata": {},
    "outputs": [
     {
@@ -3786,7 +3786,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "7154155a",
+   "id": "1e3c293b",
    "metadata": {},
    "outputs": [
     {
@@ -3931,7 +3931,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "2ac3607a",
+   "id": "1b205555",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3942,7 +3942,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "8afbb6d1",
+   "id": "fdf13ba4",
    "metadata": {},
    "outputs": [
     {
@@ -3980,7 +3980,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "1e82a78a",
+   "id": "d97046ab",
    "metadata": {},
    "outputs": [
     {
@@ -4136,7 +4136,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "4583b6f4",
+   "id": "6a91f0ce",
    "metadata": {},
    "outputs": [
     {
@@ -4286,7 +4286,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "11c00c16",
+   "id": "ef157f92",
    "metadata": {},
    "outputs": [
     {
@@ -4436,7 +4436,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "80b18138",
+   "id": "394791b7",
    "metadata": {},
    "outputs": [
     {
@@ -4583,7 +4583,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "3eeaa09e",
+   "id": "4847d5d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4593,7 +4593,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "7906246f",
+   "id": "8e56ca07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4612,7 +4612,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "81f32084",
+   "id": "a670c0b9",
    "metadata": {},
    "outputs": [
     {
@@ -4752,7 +4752,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "7d51d335",
+   "id": "0f3e38bc",
    "metadata": {},
    "outputs": [
     {
@@ -4892,7 +4892,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "cef86491",
+   "id": "c67efdd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4913,7 +4913,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "9fd26867",
+   "id": "89faf37f",
    "metadata": {},
    "outputs": [
     {
@@ -4950,7 +4950,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "0bae08df",
+   "id": "cf851eb8",
    "metadata": {},
    "outputs": [
     {
@@ -4987,7 +4987,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "445278e6",
+   "id": "909abadb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5006,7 +5006,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "636eb5cb",
+   "id": "29ceebc8",
    "metadata": {},
    "outputs": [
     {
@@ -5033,7 +5033,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "bbd6856c",
+   "id": "a890ace6",
    "metadata": {},
    "outputs": [
     {
@@ -5070,7 +5070,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "e3f20d36",
+   "id": "e3927ee2",
    "metadata": {},
    "outputs": [
     {
@@ -5178,7 +5178,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "45d0c24d",
+   "id": "55748673",
    "metadata": {},
    "outputs": [
     {
@@ -5284,7 +5284,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "2fcf2e75",
+   "id": "51ef92f4",
    "metadata": {},
    "outputs": [
     {
@@ -5390,7 +5390,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "28fa499a",
+   "id": "e25edab2",
    "metadata": {},
    "outputs": [
     {
@@ -5494,7 +5494,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "c2598597",
+   "id": "c4f8d37e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5511,7 +5511,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "65c76d61",
+   "id": "a11bc801",
    "metadata": {},
    "outputs": [
     {
@@ -5541,7 +5541,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "e1b48748",
+   "id": "38dd57ca",
    "metadata": {},
    "outputs": [
     {
@@ -5580,7 +5580,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "41b6c444",
+   "id": "0377bc8f",
    "metadata": {},
    "outputs": [
     {
@@ -5619,7 +5619,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "dfbe0613",
+   "id": "21964144",
    "metadata": {},
    "outputs": [
     {
@@ -5646,7 +5646,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "487e0724",
+   "id": "3940dfb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5658,7 +5658,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "e3e0e0b0",
+   "id": "4f5086f0",
    "metadata": {},
    "outputs": [
     {
@@ -5998,7 +5998,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "a82cc165",
+   "id": "d9adefdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6015,7 +6015,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "36da7227",
+   "id": "3f76dce7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6030,7 +6030,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "09d0e6fe",
+   "id": "728072b4",
    "metadata": {},
    "outputs": [
     {
@@ -6056,7 +6056,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "cbaf1667",
+   "id": "8f975513",
    "metadata": {},
    "outputs": [
     {
@@ -6177,7 +6177,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "6056cb84",
+   "id": "17170030",
    "metadata": {},
    "outputs": [
     {
@@ -6299,7 +6299,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "984abe4d",
+   "id": "fe0933e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6313,7 +6313,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "3741aaaf",
+   "id": "eaa6ff26",
    "metadata": {},
    "outputs": [
     {
@@ -6479,7 +6479,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "197be6a4",
+   "id": "1eb38058",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6500,7 +6500,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "5543e569",
+   "id": "698cfd56",
    "metadata": {},
    "outputs": [
     {
@@ -6604,7 +6604,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "3d2e2657",
+   "id": "ea6f7d97",
    "metadata": {},
    "outputs": [
     {
@@ -6708,11 +6708,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "21975109",
+   "execution_count": 141,
+   "id": "8f5e305f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 4.13.1 Group By School Type\n",
+    "\n",
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8c548ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4.13.2 Create a DataFrame for the Scores by School Type"
+   ]
   }
  ],
  "metadata": {
